[gd_scene load_steps=6 format=3 uid="uid://cw2ru2etbd3sb"]

[ext_resource type="Script" path="res://Scenes/scsettings.gd" id="1_y6tp2"]
[ext_resource type="Theme" uid="uid://3n0dhmuyonv8" path="res://style/Style.tres" id="2_cbrp4"]

[sub_resource type="Animation" id="Animation_oahmt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_twef0"]
resource_name = "new_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sa68c"]
_data = {
"RESET": SubResource("Animation_oahmt"),
"new_animation": SubResource("Animation_twef0")
}

[node name="Settings" type="Control"]
process_mode = 3
light_mask = 3
visibility_layer = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y6tp2")

[node name="Rus" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -10.0
offset_right = -15.04
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cbrp4")
text = "Rus
"

[node name="Eng" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -10.0
offset_right = 55.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cbrp4")
text = "Eng
"

[node name="Label" type="Label" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -30.0
offset_right = 54.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cbrp4")
text = "Full screen - F"

[node name="Quit" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 341.0
offset_top = 262.0
offset_right = 383.0
offset_bottom = 293.0
theme = ExtResource("2_cbrp4")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_sa68c")
}

[connection signal="pressed" from="Rus" to="." method="_on_rus_pressed"]
[connection signal="pressed" from="Eng" to="." method="_on_eng_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
